# tka-studio

./: .env.example  .env.instagram.example  .eslintignore  .eslintrc.json  .gitignore  .markdownlintrc.json  .mcp.json  .pre-commit-config-auto-stage.yaml  .pre-commit-config-seamless.yaml  .pre-commit-config-silent.yaml  .pre-commit-config.yaml  .prettierignore  0.1.0  ACCESSIBILITY_AUDIT.md  ANIMATE_MODULE_PROGRESS_REPORT.md  ANIMATE_MODULE_SCAFFOLDING.md  ANIMATION_EXTENSION_GUIDE.md  ANIMATION_REFACTOR_SUMMARY.md  ANIMATION_SYSTEM.md  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_DIAGRAMS.md  ARROW_CREATION_BUG_FIX_SUMMARY.md  AURORA_ANIMATION_BUG.md  AURORA_CONTRAST_SYSTEM.md  AURORA_MANUAL_TEST.md  AURORA_TEST_RESULTS.md  AUTHENTICATION_COMPLETE.md  AUTOMATED_TESTING_STATUS.md  AUTOMATED_TESTING_SUMMARY.md  BEAT_SELECTION_EXTRACTION_COMPLETE.md  BITS_UI_MIGRATION_EXAMPLES.md  CLEAR_SEQUENCE_TEST_PLAN.md  COMPLETE_INTERFACE_COVERAGE_ANALYSIS.md  COMPONENT_ARCHITECTURE_ANALYSIS.md  CONSOLIDATED_TEST_STRUCTURE_DESIGN.md  CONTEXT_DETECTION_IMPLEMENTATION_SUMMARY.md  CORRECTED-DEAD-CODE-ANALYSIS.md  CREATE_PANEL_DRAWER_FIX.md  CRITICAL_FIXES_GUIDE.md  DEBUG_FIX_GUIDE.md  (+260 more)
.claude/: config.json  (+1 more)
src/web_app/modern_web/modern_desktop/: application_state.json  comprehensive_test_log.json  integrate_browse_tab_services.py  output.txt  pyproject.toml  session_state.json  settings.json  test_letter_type.py  ui_state.json
src/web_app/modern_web/modern_desktop/.github/workflows/: test-lifecycle.yml
src/web_app/modern_web/modern_desktop/application/adapters/: qt_prop_rendering_service_adapter.py
src/web_app/modern_web/modern_desktop/application/services/backgrounds/: __init__.py
src/web_app/modern_web/modern_desktop/application/services/browse/: dictionary_data_manager.py  progressive_loading_coordinator.py  sequence_sorter_service.py
src/web_app/modern_web/modern_desktop/application/services/core/: __init__.py  application_initialization_orchestrator.py  application_state_manager.py
src/web_app/modern_web/modern_desktop/application/services/generation/: generation_service.py  generation_service_registration.py
src/web_app/modern_web/modern_desktop/application/services/graph_editor/: graph_editor_data_flow_manager.py
src/web_app/modern_web/modern_desktop/application/services/learn/: __init__.py
src/web_app/modern_web/modern_desktop/application/services/sequence/: loader.py  sequence_persistence_adapter.py  (+2 more)
src/web_app/modern_web/modern_desktop/core/: monitoring.py
src/web_app/modern_web/modern_desktop/core/application/: __init__.py  service_registration_helper.py
src/web_app/modern_web/modern_desktop/core/commands/: __init__.py
src/web_app/modern_web/modern_desktop/core/dependency_injection/: browse_service_registration.py  container_utils.py  service_registry.py  settings_service_registration.py  validation_engine.py
src/web_app/modern_web/modern_desktop/core/error_handling/: __init__.py
src/web_app/modern_web/modern_desktop/core/interfaces/: background_interfaces.py  graph_editor_services.py  image_export_services.py  layout_calculation_services.py  option_picker_interfaces.py  pictograph_rendering_services.py  sequence_card_services.py  ui_services.py  validation_services.py  workbench_export_services.py  write_services.py
src/web_app/modern_web/modern_desktop/core/logging/: apply_logging_fix.py  smart_logger.py
src/web_app/modern_web/modern_desktop/core/testing/: ai_agent_helpers.py
src/web_app/modern_web/modern_desktop/core/types/: __init__.py  coordinates.py
src/web_app/modern_web/modern_desktop/domain/: __init__.py
src/web_app/modern_web/modern_desktop/domain/models/: __init__.py  arrow_data.py  browse_models.py  motion_data.py  pictograph_data.py  settings_models.py
src/web_app/modern_web/modern_desktop/infrastructure/storage/: __init__.py  file_based_sequence_data_service.py  sequence_repository.py
src/web_app/modern_web/modern_desktop/legacy_browse_tab/: browse_tab_delete_confirmation_dialog.py  browse_tab_filter_controller.py  browse_tab_options_panel.py  browse_tab_selection_handler.py  browse_tab_ui_updater.py
src/web_app/modern_web/modern_desktop/legacy_browse_tab/sequence_picker/: sequence_picker.py  sequence_picker_sorter.py
src/web_app/modern_web/modern_desktop/legacy_browse_tab/sequence_viewer/: sequence_viewer_action_button_panel.py  sequence_viewer_state.py
src/web_app/modern_web/modern_desktop/legacy_browse_tab/temp_beat_frame/: temp_beat_frame_layout_manager.py
src/web_app/modern_web/modern_desktop/legacy_browse_tab/thumbnail_box/: thumbnail_box_header.py  thumbnail_box_nav_button.py  thumbnail_box_nav_buttons_widget.py
src/web_app/modern_web/modern_desktop/legacy_generate_tab/: generate_sequence_button.py  generate_tab_layout_manager.py  turn_intensity_manager.py
src/web_app/modern_web/modern_desktop/legacy_generate_tab/circular/: CAP_type.py
src/web_app/modern_web/modern_desktop/legacy_generate_tab/freeform/: styled_border_overlay_for_button.py
src/web_app/modern_web/modern_desktop/legacy_generate_tab/widgets/: increment_adjuster_button.py
src/web_app/modern_web/modern_desktop/presentation/components/: __init__.py  component_base.py
src/web_app/modern_web/modern_desktop/presentation/controllers/: __init__.py
src/web_app/modern_web/modern_desktop/presentation/factories/: widget_factory.py
src/web_app/modern_web/modern_desktop/presentation/managers/: __init__.py
src/web_app/modern_web/modern_desktop/presentation/qt_integration/: lifecycle_management.py
src/web_app/modern_web/modern_desktop/presentation/styles/: mixins.py
src/web_app/modern_web/modern_desktop/presentation/utils/: __init__.py
src/web_app/modern_web/modern_desktop/scripts/: README_TEST_UI.md  image_export_test_ui.py  run_simple_tests.py  run_window_flashing_regression_tests.py  test_beat_size_calculation.py
src/web_app/modern_web/modern_desktop/scripts/performance/: validate_framework.py
src/web_app/modern_web/modern_desktop/simplified/: DELETE_THIS_DIRECTORY.txt
src/web_app/modern_web/modern_desktop/ui/adapters/: qt_geometry_adapter.py
(+13103 files in other folders)
