[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tka"
version = "1.0.0"
description = "The Kinetic Alphabet"
authors = [
    {name = "Austen Cloud", email = "tkaflowarts@gmail.com"}
]
dependencies = [
    "PyQt6>=6.4.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0", 
    "isort>=5.12.0",
    "pylint>=2.17.0",
    "mypy>=1.5.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0"
]
test-automation = [
    "pre-commit>=3.0.0",
    "watchdog>=3.0.0",
    "schedule>=1.2.0",
    "pytest-xdist>=3.0.0",
    "pytest-qt>=4.2.0",
    "plyer>=2.1.0"
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pylint.master]
extension-pkg-whitelist = ["PyQt6"]

[tool.pylint.typecheck]
generated-members = ["PyQt6.*"]

[tool.pylint.messages_control]
disable = [
    "C0330",  # Wrong hanging indentation (removed from pylint)
    "C0326",  # Bad whitespace (removed from pylint)
    "W1203",  # logging-fstring-interpolation
    "W0718",  # broad-exception-caught
    "C0411",  # wrong-import-order
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
    "R0912",  # too-many-branches
    "R0915",  # too-many-statements
    "C0103",  # invalid-name (Qt uses camelCase)
    "W0613",  # unused-argument (common in Qt signal handlers)
    "R0201",  # no-self-use (common in Qt event handlers)
    "C0116",  # missing-function-docstring
    "C0115",  # missing-class-docstring
    "C0114",  # missing-module-docstring
    "E0401"   # import-error (handled by .pylintrc)
]

# pytest configuration moved to pytest.ini to avoid conflicts

[tool.pyright]
# Include all source directories
include = [
    "src/desktop/legacy/src",
    "src/desktop/modern/src", 
    "launcher",
    "packages",
    "tests"
]

# Exclude build artifacts and cache directories
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/.*",
    "build",
    "dist",
    "**/.pytest_cache",
    "**/venv",
    "**/env"
]

# Define extra paths for import resolution
extraPaths = [
    ".",
    "data",
    "packages/shared-types/python",
    "packages/constants/python",
    "launcher",
    "src",
    "src/desktop/legacy/src",
    "src/desktop/modern/src",
    "packages",
    "assets"
]

# TURN OFF ALL TYPE CHECKING
pythonVersion = "3.12"
typeCheckingMode = "basic"

# DISABLE ALL REPORTS - NO MORE ERRORS
reportMissingImports = "none"
reportMissingTypeStubs = false
reportUnusedImport = "none"
reportDuplicateImport = "none"
reportReturnType = "none"
reportArgumentType = "none"
reportAttributeAccessIssue = "none"
reportGeneralTypeIssues = "none"
reportOptionalMemberAccess = "none"
reportOptionalSubscript = "none"
reportPrivateImportUsage = "none"
reportUnknownArgumentType = "none"
reportUnknownVariableType = "none"
reportIncompatibleMethodOverride = "none"
reportIncompatibleVariableOverride = "none"
reportIncompleteStub = "none"
reportInconsistentConstructor = "none"
reportMissingParameterType = "none"
reportMissingTypeArgument = "none"
reportPrivateUsage = "none"
reportTypeCommentUsage = "none"
reportUnknownLambdaType = "none"
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportUnnecessaryCast = "none"
reportUnnecessaryComparison = "none"
reportUnnecessaryContains = "none"
reportUnnecessaryIsInstance = "none"
reportUnusedClass = "none"
reportUnusedFunction = "none"
reportUnusedVariable = "none"
reportIndexIssue = "none"
reportOperatorIssue = "none"
reportAssignmentType = "none"
reportInvalidTypeForm = "none"
reportInvalidTypeArguments = "none"
reportSelfClsParameterName = "none"

[tool.setuptools]
packages = ["tka.desktop.modern", "tka.desktop.legacy", "tka.launcher"]

[tool.setuptools.package-dir]
"tka.desktop.modern" = "src/desktop/modern/src"
"tka.desktop.legacy" = "src/desktop/legacy/src"
"tka.launcher" = "launcher"
