# This file now contains the configuration for Ruff (replaces Pylint, Black, and isort)

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tka"
version = "1.0.0"
description = "The Kinetic Alphabet"
authors = [{ name = "Austen Cloud", email = "tkaflowarts@gmail.com" }]
dependencies = [
    "PyQt6>=6.4.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "pytest>=7.4.0",
    "pytest-qt>=4.2.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.21.0",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=4.1.0",
    "pytest-html>=3.1.0",
    "pytest-metadata>=3.0.0",
    "pytest-xvfb>=3.0.0",
    "hypothesis>=6.0.0",
    "Faker>=18.0.0",
    "anyio>=3.6.0",
]

[project.optional-dependencies]
# Replaced old tools with Ruff
dev = ["ruff>=0.1.0", "mypy>=1.5.0"]
test-automation = [
    "pre-commit>=3.0.0",
    "watchdog>=3.0.0",
    "schedule>=1.2.0",
    "pytest-xdist>=3.0.0",
    "plyer>=2.1.0",
]

# ===================================================================
# PYTEST CONFIGURATION
# ===================================================================

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--import-mode=importlib",
    "--strict-markers",
    "--strict-config",
    "--disable-warnings",
    "-ra",
]
testpaths = ["tests", "tests/unit", "tests/integration", "tests/e2e"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests",
    "modern: Modern codebase tests",
    "legacy: Legacy codebase tests",
    "launcher: Launcher tests",
    "slow: Tests taking >5 seconds",
    "gui: GUI tests requiring display",
    "skip_if_no_pyqt6: Skip if PyQt6 unavailable",
]

# ===================================================================
# RUFF CONFIGURATION (REPLACES BLACK + ISORT + PYLINT)
# ===================================================================

[tool.ruff]
# Same line length as your previous Black config
line-length = 88
target-version = "py39"

# Include and exclude patterns
include = ["*.py", "*.pyi"]
extend-exclude = [
    "build",
    "dist",
    ".venv",
    "venv",
    "env",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
    "node_modules",
    ".git",
]

[tool.ruff.lint]
# Enable these rule sets (replaces most of your Pylint config)
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "PIE",    # flake8-pie
    "SIM",    # flake8-simplify
    "RET",    # flake8-return
    "PTH",    # flake8-use-pathlib
]

# Disable rules that were causing issues in your old Pylint config
ignore = [
    "E501",   # Line too long (handled by formatter)
    "E731",   # Do not assign a lambda expression
    "N802",   # Function name should be lowercase (Qt uses camelCase)
    "N803",   # Argument name should be lowercase (Qt uses camelCase)
    "N806",   # Variable in function should be lowercase (Qt uses camelCase)
    "N812",   # Lowercase imported as non-lowercase (PyQt6 modules)
    "N815",   # mixedCase variable in class scope (Qt widgets)
    "N816",   # mixedCase variable in global scope
    "B008",   # Do not perform function calls in argument defaults
    "C901",   # Too complex (we handle complexity differently)
    "RET504", # Unnecessary variable assignment before return
    "RET505", # Unnecessary else after return
    "RET506", # Unnecessary elif after raise
    "RET507", # Unnecessary elif after continue
    "RET508", # Unnecessary elif after break
    "SIM102", # Use a single if-statement instead of nested if-statements
    "SIM108", # Use ternary operator instead of if-else
    "SIM117", # Use a single with statement for multiple contexts
    "PTH100", # os.path.abspath should be replaced by Path.resolve()
    "PTH103", # os.makedirs should be replaced by Path.mkdir
    "PTH107", # os.remove should be replaced by Path.unlink
    "PTH110", # os.path.exists should be replaced by Path.exists
    "PTH111", # os.path.expanduser should be replaced by Path.expanduser
    "PTH112", # os.path.isdir should be replaced by Path.is_dir
    "PTH113", # os.path.isfile should be replaced by Path.is_file
    "PTH118", # os.path.join should be replaced by Path
    "PTH119", # os.path.basename should be replaced by Path.name
    "PTH120", # os.path.dirname should be replaced by Path.parent
    "PTH123", # open() should be replaced by Path.open()
]

# Allow specific variable names (from your old Pylint config)
[tool.ruff.lint.per-file-ignores]
# Test files can have longer lines and more flexibility
"test_*.py" = ["E501", "N801", "N802", "N803"]
"*_test.py" = ["E501", "N801", "N802", "N803"]
"tests/*" = ["E501", "N801", "N802", "N803"]

# Allow unused imports in __init__.py files
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
# Configure import sorting (replaces your old isort config)
case-sensitive = false
force-single-line = false
force-sort-within-sections = true
known-first-party = ["tka"]
split-on-trailing-comma = true

[tool.ruff.lint.mccabe]
# Complexity threshold (more lenient than default)
max-complexity = 15

[tool.ruff.lint.pycodestyle]
max-doc-length = 120

[tool.ruff.format]
# Formatting options (replaces Black)
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# ===================================================================
# MYPY CONFIGURATION (KEEPING MINIMAL TYPE CHECKING)
# ===================================================================

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = false
warn_unreachable = false
ignore_missing_imports = true
strict = false

# Exclude patterns
exclude = [
    "build",
    "dist",
    ".venv",
    "venv",
    "__pycache__",
    ".pytest_cache",
    "node_modules",
]

# --- SETUPTOOLS CONFIGURATION ---
[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
exclude = ["tests*", "*tests*", "test_*"]

[tool.setuptools.package-dir]
"" = "src"