[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]

[tool.ruff]
# Set the maximum line length to 88 (Black compatible)
line-length = 88

# Enable auto-fixing of violations
fix = true

# Enable unsafe fixes (including UP045 and other modernization fixes)
unsafe-fixes = true

# Show fixes in the output
show-fixes = true

# Assume Python 3.8+
target-version = "py38"

# Include additional file patterns (like Jupyter notebooks)
extend-include = ["*.ipynb"]

# Exclude common directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "__pycache__",
]

[tool.ruff.lint]
# Enable a comprehensive set of rules
select = [
    # pycodestyle
    "E",  # Error
    "W",  # Warning

    # Pyflakes
    "F",  # pyflakes

    # pyupgrade
    "UP", # pyupgrade

    # flake8-bugbear
    "B",  # flake8-bugbear

    # flake8-simplify
    "SIM", # flake8-simplify

    # isort
    "I",  # isort

    # McCabe complexity
    "C90", # mccabe

    # flake8-comprehensions
    "C4", # flake8-comprehensions

    # flake8-implicit-str-concat
    "ISC", # flake8-implicit-str-concat

    # flake8-pytest-style
    "PT", # flake8-pytest-style

    # flake8-return
    "RET", # flake8-return

    # flake8-unused-arguments
    "ARG", # flake8-unused-arguments

    # flake8-use-pathlib
    "PTH", # flake8-use-pathlib

    # pandas-vet
    "PD", # pandas-vet

    # pygrep-hooks
    "PGH", # pygrep-hooks

    # Pylint
    "PL", # pylint

    # tryceratops
    "TRY", # tryceratops

    # flynt
    "FLY", # flynt

    # NumPy-specific rules
    "NPY", # NumPy-specific rules

    # Ruff-specific rules
    "RUF", # Ruff-specific rules
]

# Ignore specific rules that might be too strict for your codebase
ignore = [
    "E501",   # Line too long (handled by formatter)
    "W191",   # Indentation contains tabs (handled by formatter)
    "E111",   # Indentation is not a multiple of four (handled by formatter)
    "E114",   # Indentation is not a multiple of four (comment) (handled by formatter)
    "E117",   # Over-indented (handled by formatter)
    "D206",   # Docstring should be indented with spaces (handled by formatter)
    "D300",   # Use """triple double quotes""" (handled by formatter)
    "Q000",   # Single quotes found but double quotes preferred (handled by formatter)
    "Q001",   # Single quote docstring found but double quotes preferred (handled by formatter)
    "Q002",   # Docstring contains backslash (handled by formatter)
    "Q003",   # Avoidable escaped quote (handled by formatter)
    "COM812", # Trailing comma missing (handled by formatter)
    "COM819", # Trailing comma prohibited (handled by formatter)
    "ISC001", # Single line implicit string concatenation (handled by formatter)
    "ISC002", # Multi line implicit string concatenation (handled by formatter)

    # These might be too strict for some codebases
    "TRY003", # Avoid specifying long messages outside the exception class
    "PLR0913", # Too many arguments to function call
    "PLR2004", # Magic value used in comparison
    "RET504", # Unnecessary variable assignment before return statement
]

# Allow auto-fixes for all enabled rules
fixable = ["ALL"]

# Disable auto-fixes for these rules (empty means allow all)
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and have longer lines
"tests/*" = ["PLR2004", "S101", "E501"]
"test_*" = ["PLR2004", "S101", "E501"]
"*test*.py" = ["PLR2004", "S101", "E501"]

# __init__.py files can have unused imports
"__init__.py" = ["F401"]

# Scripts can have print statements and magic values
"scripts/*" = ["T201", "PLR2004"]

[tool.ruff.lint.mccabe]
# Set the maximum cyclomatic complexity
max-complexity = 10

[tool.ruff.lint.pylint]
# Set the maximum number of arguments for function calls
max-args = 8
# Set the maximum number of branches for if statements
max-branches = 15
# Set the maximum number of return statements
max-returns = 8
# Set the maximum number of statements
max-statements = 60

[tool.ruff.lint.isort]
# Configure import sorting
combine-as-imports = true
force-sort-within-sections = true
force-wrap-aliases = true
lines-after-imports = 2
order-by-type = true
relative-imports-order = "closest-to-furthest"
required-imports = ["from __future__ import annotations"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

# Known first-party packages (adjust for your project)
known-first-party = ["desktop", "modern"]

# Split on trailing comma
split-on-trailing-comma = true

[tool.ruff.format]
# Like Black, use double quotes for strings
quote-style = "double"

# Like Black, indent with spaces, rather than tabs
indent-style = "space"

# Like Black, respect magic trailing commas
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings
docstring-code-format = true

# Set the line length limit for docstring formatting
docstring-code-line-length = "dynamic"
